--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -15,6 +15,9 @@ jobs:
     - uses: actions/checkout@v3
       with:
         ref: ${{ github.head_ref }}
+        
+    - name: Run gofmt
+      run: go fmt ./...
     
     - name: Run gofumpt
       run: |
