--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -12,9 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
-    - uses: actions/checkout@v3
-      with:
-        ref: ${{ github.head_ref }}
+    - name: Checkout PR
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: gh pr checkout ${{ github.event.pull_request.number }}
         
     - name: Run gofmt
       run: go fmt ./...
@@ -26,9 +27,8 @@ jobs:
         gofumpt -l -extra -w .
       
     - name: Push changes
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-          git config --global user.name 'Blu formatting runner'
-          git config --global user.email 'fakefloordiv@gmail.com'
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git commit -am "Automated changes"
           git push
