--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -11,11 +11,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    
-    - name: Checkout PR
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: gh pr checkout ${{ github.event.pull_request.number }}
         
     - name: Run gofmt
       run: go fmt ./...
@@ -30,5 +25,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
+          git checkout ${{ github.event.pull_request.head }}
           git commit -am "Automated changes"
           git push
