--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -33,6 +33,6 @@ jobs:
           git config user.name github-actions[bot]
           git config user.email github-actions[bot]@users.noreply.github.com
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-          git checkout ${{ github.event.pull_request.head }}
+          git checkout ${{ github.event.pull_request.head.ref }}
           git commit -am "Automated changes"
           git push
